# ParametrizANI

./: .readthedocs.yml  LICENSE  MANIFEST.in  ParametrizANI.ipynb  ParametrizANI_GAFF2.ipynb  ParametrizANI_OpenFF.ipynb  ParametrizANI_RESP_charges.ipynb  ParametrizANI_RotProf.ipynb  ParametrizANI_TorchANI+Psi4.ipynb  Psi4+TorchANI.ipynb  README.md  TorchANI_2D.ipynb  mkdocs.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
docs/: examples.md  index.md  installation.md  methods.md  quickstart.md  requirements.txt  workflow.md
docs/api/: conformer_gen.md  dihedral_optimizer.md  energy_minimization.md  psi4_utils.md  reference_energy.md  topology_gen.md  utils.md  validation.md
examples/: example_basic.py  example_full_workflow.py  example_psi4.py
notebooks/: ParametrizANI_GAFF2.ipynb  ParametrizANI_OpenFF.ipynb  ParametrizANI_RESP_charges.ipynb  ParametrizANI_RotProf.ipynb  ParametrizANI_TorchANI_Psi4.ipynb
parametrizani/: __init__.py  conformer_gen.py  dihedral_optimizer.py  energy_minimization.py  psi4_utils.py  reference_energy.py  topology_gen.py  utils.py  validation.py
tests/: test_ring_dihedral_scan.py
